// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBoxHeader Test 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-modal-box__header"
  >
    This is a ModalBox header
  </header>
</DocumentFragment>
`;

exports[`ModalBoxHeader help renders 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-modal-box__header pf-m-help"
  >
    <div
      class="pf-v6-c-modal-box__header-main"
    >
      This is a ModalBox header
    </div>
    <div
      class="pf-v6-c-modal-box__header-help"
    >
      <div>
        test
      </div>
    </div>
  </header>
</DocumentFragment>
`;
